--- a/.gitignore
+++ b/.gitignore
@@ -327,3 +327,8 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
+
+#GRADLE
+
+.gradle/
+build/
